"Add light mode features"

--- a/public/style.css
+++ b/public/style.css
@@ -1602,6 +1602,11 @@ video {
   background-size: cover;
 }
 
+.object-fill{
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
 .p-1{
   padding: 0.25rem;
 }
