--- a/public/style.css
+++ b/public/style.css
@@ -1598,6 +1598,11 @@ video {
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
+.bg-l-accent{
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 134 254 / var(--tw-bg-opacity));
+}
+
 .bg-cover{
   background-size: cover;
 }
@@ -1977,6 +1982,36 @@ video {
   transition-duration: 300ms;
 }
 
+.dynamic-text{
+  --tw-text-opacity: 1;
+  color: rgb(10 10 18 / var(--tw-text-opacity));
+}
+
+:is(.dark .dynamic-text){
+  --tw-text-opacity: 1;
+  color: rgb(214 215 216 / var(--tw-text-opacity));
+}
+
+.dynamic-primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 248 253 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dynamic-primary){
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 31 36 / var(--tw-bg-opacity));
+}
+
+.dynamic-secondary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 235 235 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dynamic-secondary){
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 41 47 / var(--tw-bg-opacity));
+}
+
 .backdrop\:cursor-pointer::backdrop{
   cursor: pointer;
 }
@@ -2010,6 +2045,11 @@ video {
 .hover\:bg-l-secondary:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-700:hover{
@@ -2093,6 +2133,11 @@ video {
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
 
+:is(.dark .dark\:bg-d-accent){
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 134 254 / var(--tw-bg-opacity));
+}
+
 :is(.dark .dark\:text-d-accent){
   --tw-text-opacity: 1;
   color: rgb(42 134 254 / var(--tw-text-opacity));
@@ -2120,6 +2165,11 @@ video {
 :is(.dark .dark\:hover\:bg-d-secondary:hover){
   --tw-bg-opacity: 1;
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:hover\:bg-gray-700:hover){
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:focus\:ring-offset-gray-800:focus){
