--- a/public/style.css
+++ b/public/style.css
@@ -1144,10 +1144,6 @@ video {
   height: 8rem;
 }
 
-.h-36{
-  height: 9rem;
-}
-
 .h-4{
   height: 1rem;
 }
@@ -1178,6 +1174,10 @@ video {
 
 .h-\[365px\]{
   height: 365px;
+}
+
+.h-\[400px\]{
+  height: 400px;
 }
 
 .h-\[40px\]{
@@ -1521,18 +1521,9 @@ video {
   border-color: rgb(42 134 254 / var(--tw-border-opacity));
 }
 
-.border-d-bgc{
+.border-l-bgc{
   --tw-border-opacity: 1;
-  border-color: rgb(23 24 28 / var(--tw-border-opacity));
-}
-
-.border-d-text{
-  --tw-border-opacity: 1;
-  border-color: rgb(214 215 216 / var(--tw-border-opacity));
-}
-
-.border-transparent{
-  border-color: transparent;
+  border-color: rgb(238 241 243 / var(--tw-border-opacity));
 }
 
 .border-l-text{
@@ -1540,13 +1531,12 @@ video {
   border-color: rgb(10 10 18 / var(--tw-border-opacity));
 }
 
-.border-l-bgc{
-  --tw-border-opacity: 1;
-  border-color: rgb(238 241 243 / var(--tw-border-opacity));
+.border-transparent{
+  border-color: transparent;
 }
 
-.bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]{
-  background-color: rgba(214,215,216,0.2);
+.bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
+  background-color: rgba(214,215,216,0.7);
 }
 
 .bg-blue-600{
@@ -1593,16 +1583,6 @@ video {
   background-color: rgb(238 241 243 / var(--tw-bg-opacity));
 }
 
-.bg-l-primary{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 248 253 / var(--tw-bg-opacity));
-}
-
-.bg-l-secondary{
-  --tw-bg-opacity: 1;
-  background-color: rgb(235 235 235 / var(--tw-bg-opacity));
-}
-
 .bg-red-700{
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
@@ -1611,14 +1591,6 @@ video {
 .bg-red-800{
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-
-.bg-\[rgba\(214\2c 215\2c 216\2c 0\.5\)\]{
-  background-color: rgba(214,215,216,0.5);
-}
-
-.bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
-  background-color: rgba(214,215,216,0.7);
 }
 
 .bg-cover{
@@ -1912,6 +1884,10 @@ video {
   opacity: 0;
 }
 
+.opacity-100{
+  opacity: 1;
+}
+
 .opacity-70{
   opacity: 0.7;
 }
@@ -1984,10 +1960,6 @@ video {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.delay-150{
-  transition-delay: 150ms;
 }
 
 .duration-300{
@@ -2141,14 +2113,18 @@ video {
   opacity: 0.8;
 }
 
+:is(.dark .dark\:border-d-bgc){
+  --tw-border-opacity: 1;
+  border-color: rgb(23 24 28 / var(--tw-border-opacity));
+}
+
 :is(.dark .dark\:border-d-text){
   --tw-border-opacity: 1;
   border-color: rgb(214 215 216 / var(--tw-border-opacity));
 }
 
-:is(.dark .dark\:border-d-bgc){
-  --tw-border-opacity: 1;
-  border-color: rgb(23 24 28 / var(--tw-border-opacity));
+:is(.dark .dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]){
+  background-color: rgba(214,215,216,0.2);
 }
 
 :is(.dark .dark\:bg-d-accent){
@@ -2159,20 +2135,6 @@ video {
 :is(.dark .dark\:bg-d-bgc){
   --tw-bg-opacity: 1;
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-d-primary){
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 31 36 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-d-secondary){
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 41 47 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]){
-  background-color: rgba(214,215,216,0.2);
 }
 
 :is(.dark .dark\:text-d-accent){
