--- a/public/style.css
+++ b/public/style.css
@@ -1184,6 +1184,10 @@ video {
   height: 45%;
 }
 
+.h-\[50px\]{
+  height: 50px;
+}
+
 .h-\[55\%\]{
   height: 55%;
 }
@@ -1744,6 +1748,10 @@ video {
   text-align: center;
 }
 
+.align-middle{
+  vertical-align: middle;
+}
+
 .align-bottom{
   vertical-align: bottom;
 }
@@ -1976,6 +1984,12 @@ video {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 300ms;
+}
+
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dynamic-text{
