--- a/public/style.css
+++ b/public/style.css
@@ -967,64 +967,12 @@ video {
   top: 50%;
 }
 
-.top-\[61px\]{
-  top: 61px;
-}
-
-.top-1\/4{
-  top: 25%;
-}
-
-.top-1\/3{
-  top: 33.333333%;
-}
-
-.top-2\/3{
-  top: 66.666667%;
-}
-
-.top-12{
-  top: 3rem;
-}
-
-.bottom-10{
-  bottom: 2.5rem;
-}
-
-.bottom-5{
-  bottom: 1.25rem;
-}
-
-.bottom-8{
-  bottom: 2rem;
-}
-
-.bottom-16{
-  bottom: 4rem;
-}
-
-.bottom-14{
-  bottom: 3.5rem;
-}
-
-.bottom-20{
-  bottom: 5rem;
-}
-
-.top-20{
-  top: 5rem;
-}
-
-.top-16{
-  top: 4rem;
-}
-
 .top-14{
   top: 3.5rem;
 }
 
-.bottom-4{
-  bottom: 1rem;
+.top-\[61px\]{
+  top: 61px;
 }
 
 .-z-10{
@@ -1112,6 +1060,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.mr-4{
+  margin-right: 1rem;
+}
+
 .mt-1{
   margin-top: 0.25rem;
 }
@@ -1144,14 +1096,6 @@ video {
   margin-top: auto;
 }
 
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-
-.mr-4{
-  margin-right: 1rem;
-}
-
 .box-border{
   box-sizing: border-box;
 }
@@ -1178,6 +1122,10 @@ video {
 
 .hidden{
   display: none;
+}
+
+.h-1\/2{
+  height: 50%;
 }
 
 .h-10{
@@ -1214,6 +1162,10 @@ video {
 
 .h-5{
   height: 1.25rem;
+}
+
+.h-52{
+  height: 13rem;
 }
 
 .h-6{
@@ -1286,22 +1238,6 @@ video {
 
 .h-screen{
   height: 100vh;
-}
-
-.h-24{
-  height: 6rem;
-}
-
-.h-1\/2{
-  height: 50%;
-}
-
-.h-48{
-  height: 12rem;
-}
-
-.h-52{
-  height: 13rem;
 }
 
 .w-1\/2{
@@ -1404,26 +1340,6 @@ video {
   width: 100vw;
 }
 
-.w-14{
-  width: 3.5rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-44{
-  width: 11rem;
-}
-
-.w-48{
-  width: 12rem;
-}
-
-.w-32{
-  width: 8rem;
-}
-
 .max-w-7xl{
   max-width: 80rem;
 }
@@ -1495,10 +1411,6 @@ video {
 
 .content-center{
   align-content: center;
-}
-
-.content-end{
-  align-content: flex-end;
 }
 
 .items-start{
@@ -1594,10 +1506,6 @@ video {
 
 .rounded-xl{
   border-radius: 0.75rem;
-}
-
-.rounded-3xl{
-  border-radius: 1.5rem;
 }
 
 .border{
@@ -1846,14 +1754,6 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.pl-2{
-  padding-left: 0.5rem;
-}
-
-.pl-3{
-  padding-left: 0.75rem;
 }
 
 .text-left{
@@ -2163,16 +2063,6 @@ video {
   content: var(--tw-content);
 }
 
-.hover\:border-spacing-2:hover{
-  --tw-border-spacing-x: 0.5rem;
-  --tw-border-spacing-y: 0.5rem;
-  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
-}
-
-.hover\:border-2:hover{
-  border-width: 2px;
-}
-
 .hover\:bg-blue-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -2191,16 +2081,6 @@ video {
 .hover\:bg-l-secondary:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-d-primary:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 31 36 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-l-primary:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 248 253 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-700:hover{
@@ -2342,12 +2222,12 @@ video {
 }
 
 @media (min-width: 640px){
-  .sm\:top-20{
-    top: 5rem;
-  }
-
   .sm\:top-24{
     top: 6rem;
+  }
+
+  .sm\:mb-28{
+    margin-bottom: 7rem;
   }
 
   .sm\:mt-3{
@@ -2358,12 +2238,16 @@ video {
     height: 2.5rem;
   }
 
+  .sm\:h-36{
+    height: 9rem;
+  }
+
   .sm\:h-64{
     height: 16rem;
   }
 
-  .sm\:h-36{
-    height: 9rem;
+  .sm\:h-\[calc\(100vh-73px\)\]{
+    height: calc(100vh - 73px);
   }
 
   .sm\:w-12{
@@ -2472,18 +2356,6 @@ video {
 
   .md\:h-\[calc\(100vh-73px\)\]{
     height: calc(100vh - 73px);
-  }
-
-  .md\:h-48{
-    height: 12rem;
-  }
-
-  .md\:h-36{
-    height: 9rem;
-  }
-
-  .md\:h-64{
-    height: 16rem;
   }
 
   .md\:w-12{
@@ -2607,12 +2479,12 @@ video {
     margin-top: -2rem;
   }
 
-  .lg\:mb-0{
-    margin-bottom: 0px;
-  }
-
   .lg\:mb-2{
     margin-bottom: 0.5rem;
+  }
+
+  .lg\:mb-24{
+    margin-bottom: 6rem;
   }
 
   .lg\:mt-2{
