--- a/public/style.css
+++ b/public/style.css
@@ -975,6 +975,26 @@ video {
   top: 61px;
 }
 
+.top-2{
+  top: 0.5rem;
+}
+
+.bottom-2{
+  bottom: 0.5rem;
+}
+
+.bottom-3{
+  bottom: 0.75rem;
+}
+
+.bottom-4{
+  bottom: 1rem;
+}
+
+.left-4{
+  left: 1rem;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -1240,6 +1260,11 @@ video {
   height: 100vh;
 }
 
+.min-h-fit{
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
 .w-1\/2{
   width: 50%;
 }
@@ -1338,6 +1363,11 @@ video {
 
 .w-screen{
   width: 100vw;
+}
+
+.min-w-fit{
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
 
 .max-w-7xl{
@@ -1755,6 +1785,10 @@ video {
   padding-top: 1.25rem;
 }
 
+.pl-8{
+  padding-left: 2rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -2089,6 +2123,17 @@ video {
 
 .hover\:opacity-100:hover{
   opacity: 1;
+}
+
+.hover\:ring-1:hover{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.hover\:ring-d-accent:hover{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(42 134 254 / var(--tw-ring-opacity));
 }
 
 .hover\:dynamic-primary:hover{
