--- a/public/style.css
+++ b/public/style.css
@@ -971,40 +971,12 @@ video {
   top: 3.5rem;
 }
 
-.top-\[61px\]{
-  top: 61px;
-}
-
-.top-0{
-  top: 0px;
-}
-
-.top-2{
-  top: 0.5rem;
-}
-
-.top-10{
-  top: 2.5rem;
-}
-
 .top-3{
   top: 0.75rem;
 }
 
-.left-5{
-  left: 1.25rem;
-}
-
-.right-5{
-  right: 1.25rem;
-}
-
-.top-2\.5{
-  top: 0.625rem;
-}
-
-.right-3{
-  right: 0.75rem;
+.top-\[61px\]{
+  top: 61px;
 }
 
 .-z-10{
@@ -1216,6 +1188,10 @@ video {
   height: 2rem;
 }
 
+.h-\[100svh\]{
+  height: 100svh;
+}
+
 .h-\[128px\]{
   height: 128px;
 }
@@ -1370,10 +1346,6 @@ video {
 
 .w-screen{
   width: 100vw;
-}
-
-.w-9{
-  width: 2.25rem;
 }
 
 .max-w-7xl{
@@ -1560,10 +1532,6 @@ video {
   border-top-width: 1px;
 }
 
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
 .border-dashed{
   border-style: dashed;
 }
@@ -1588,11 +1556,6 @@ video {
 
 .border-transparent{
   border-color: transparent;
-}
-
-.border-red-50{
-  --tw-border-opacity: 1;
-  border-color: rgb(254 242 242 / var(--tw-border-opacity));
 }
 
 .bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
@@ -1776,8 +1739,8 @@ video {
   padding-left: 1rem;
 }
 
-.pl-8{
-  padding-left: 2rem;
+.pl-6{
+  padding-left: 1.5rem;
 }
 
 .pl-\[6px\]{
@@ -1802,14 +1765,6 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.pl-5{
-  padding-left: 1.25rem;
-}
-
-.pl-6{
-  padding-left: 1.5rem;
 }
 
 .text-left{
@@ -2012,12 +1967,6 @@ video {
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.ring-1{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -2377,6 +2326,11 @@ video {
   .sm\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
