--- a/tailwind.css
+++ b/tailwind.css
@@ -5,126 +5,126 @@
 @tailwind utilities;
 
 @layer base {
-	* {
-		@apply transition-all duration-300;
-	}
-	/* ::selection {
+  * {
+    @apply transition-all duration-300;
+  }
+  /* ::selection {
 		@apply bg-d-accent text-d-bgc;
 	} */
-	/* width */
-	/* ::-webkit-scrollbar {
+  /* width */
+  /* ::-webkit-scrollbar {
 		@apply w-1.5 ;
 	} */
 
-	/* Track */
-	/* ::-webkit-scrollbar-track {
+  /* Track */
+  /* ::-webkit-scrollbar-track {
 		@apply bg-d-primary;
 	} */
 
-	/* Handle */
-	/* ::-webkit-scrollbar-thumb {
+  /* Handle */
+  /* ::-webkit-scrollbar-thumb {
 		@apply rounded bg-d-text;
 	} */
 
-	/* Handle on hover */
-	/* ::-webkit-scrollbar-thumb:hover {
+  /* Handle on hover */
+  /* ::-webkit-scrollbar-thumb:hover {
 		@apply bg-d-accent;
 	} */
 
-	/* width */
-	::-webkit-scrollbar {
-		@apply hidden;
-	}
+  /* width */
+  ::-webkit-scrollbar {
+    @apply hidden;
+  }
 
-	/* Track */
-	::-webkit-scrollbar-track {
-		@apply hidden;
-	}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    @apply hidden;
+  }
 
-	/* Handle */
-	::-webkit-scrollbar-thumb {
-		@apply hidden;
-	}
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply hidden;
+  }
 
-	/* Handle on hover */
-	::-webkit-scrollbar-thumb:hover {
-		@apply hidden;
-	}
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply hidden;
+  }
 }
 
 @layer components {
-	/* ! Profile */
-	/* Banner container */
-	.banner-container {
-		@apply w-full h-36 bg-d-text rounded-lg relative md:h-40 md:rounded-xl;
-	}
+  /* ! Profile */
+  /* Banner container */
+  .banner-container {
+    @apply w-full h-36 bg-d-text rounded-lg relative md:h-40 md:rounded-xl;
+  }
 
-	.banner {
-		@apply w-full h-full bg-d-secondary opacity-0 rounded-lg lg:rounded-xl text-d-text lg:text-5xl text-2xl flex justify-center items-center transition-all duration-300 cursor-pointer;
-	}
+  .banner {
+    @apply w-full h-full bg-d-secondary opacity-0 rounded-lg lg:rounded-xl text-d-text lg:text-5xl text-2xl flex justify-center items-center transition-all duration-300 cursor-pointer;
+  }
 
-	/* ! Home */
-	/* Navbar */
-	.nav-container {
-		@apply w-full bg-l-primary dark:bg-d-primary p-3.5 flex justify-between items-center fixed top-0 left-0 border-b-[1px] border-l-secondary dark:border-d-secondary md:p-3 xl:px-6 xl:py-3 z-50;
-	}
-	.nav-brand {
-		@apply font-poppins font-bold text-l-accent dark:text-d-accent text-2xl md:text-3xl xl:text-4xl;
-	}
-	.nav-icon {
-		@apply w-8 h-8 cursor-pointer p-1 hover:bg-l-secondary dark:hover:bg-d-secondary rounded-full md:w-12 md:h-12 md:p-2;
-	}
-	/* End Navbar */
+  /* ! Home */
+  /* Navbar */
+  .nav-container {
+    @apply w-full bg-l-primary dark:bg-d-primary p-3.5 flex justify-between items-center fixed top-0 left-0 border-b-[1px] border-l-secondary dark:border-d-secondary md:p-3 xl:px-6 xl:py-3 z-50;
+  }
+  .nav-brand {
+    @apply font-bold text-l-accent dark:text-d-accent text-2xl md:text-3xl xl:text-4xl;
+  }
+  .nav-icon {
+    @apply w-8 h-8 cursor-pointer p-1 hover:bg-l-secondary dark:hover:bg-d-secondary rounded-full md:w-12 md:h-12 md:p-2;
+  }
+  /* End Navbar */
 
-	/* Sidebar */
-	.sidebar-container {
-		@apply w-full h-14 bg-l-primary dark:bg-d-primary fixed bottom-0 left-0 p-1 flex flex-row items-center justify-around border-t-2 
+  /* Sidebar */
+  .sidebar-container {
+    @apply w-full h-14 bg-l-primary dark:bg-d-primary fixed bottom-0 left-0 p-1 flex flex-row items-center justify-around border-t-2 
 		z-50 border-l-secondary dark:border-d-secondary md:h-[4.5rem] xl:p-3 xl:left-0 xl:top-[73px] xl:h-[calc(100vh-73px)] xl:flex-col xl:w-72 xl:justify-start xl:items-start text-l-text dark:text-d-text xl:border-r-2  xl:border-t-0 font-open-sans;
-	}
+  }
 
-	.container-sidebar-icon {
-		@apply w-14 h-11 hover:bg-l-secondary dark:hover:bg-d-secondary  rounded p-2 cursor-pointer md:w-20 md:h-16 md:p-3 xl:flex xl:items-center xl:justify-start xl:w-full xl:p-2 xl:rounded-lg xl:h-14 xl:mb-[6px];
-	}
+  .container-sidebar-icon {
+    @apply w-14 h-11 hover:bg-l-secondary dark:hover:bg-d-secondary  rounded p-2 cursor-pointer md:w-20 md:h-16 md:p-3 xl:flex xl:items-center xl:justify-start xl:w-full xl:p-2 xl:rounded-lg xl:h-14 xl:mb-[6px];
+  }
 
-	.sidebar-icon {
-		@apply w-full h-full rounded-[inherit] xl:w-14 xl:h-11 xl:p-1;
-	}
-	.sidebar-text {
-		@apply hidden xl:block font-semibold text-xl px-1 xl:-mb-1;
-	}
-	/* End Sidebar */
-	.image-container {
-		@apply container w-full flex justify-center items-center relative lg:w-1/2;
-	}
+  .sidebar-icon {
+    @apply w-full h-full rounded-[inherit] xl:w-14 xl:h-11 xl:p-1;
+  }
+  .sidebar-text {
+    @apply hidden xl:block font-semibold text-xl px-1 xl:-mb-1;
+  }
+  /* End Sidebar */
+  .image-container {
+    @apply container w-full flex justify-center items-center relative lg:w-1/2;
+  }
 
-	.hr {
-		@apply hidden xl:block border-t-[1px] border-l-text dark:border-d-text w-full rounded-xl opacity-20 my-4;
-	}
+  .hr {
+    @apply hidden xl:block border-t-[1px] border-l-text dark:border-d-text w-full rounded-xl opacity-20 my-4;
+  }
 
-	.post {
-		@apply shadow-[0px_0px_25px_-7px_rgba(214,215,216,0.11)];
-		-webkit-box-shadow: 0px 0px 25px -7px rgba(214, 215, 216, 0.11);
-		-moz-box-shadow: 0px 0px 25px -7px rgba(214, 215, 216, 0.11);
-	}
+  .post {
+    @apply shadow-[0px_0px_25px_-7px_rgba(214,215,216,0.11)];
+    -webkit-box-shadow: 0px 0px 25px -7px rgba(214, 215, 216, 0.11);
+    -moz-box-shadow: 0px 0px 25px -7px rgba(214, 215, 216, 0.11);
+  }
 }
 
 @layer utilities {
-	.transition-300 {
-		@apply transition-all duration-300;
-	}
-	.center {
-		@apply flex items-center justify-center;
-	}
-	.dynamic-text {
-		@apply text-l-text dark:text-d-text;
-	}
-	.dynamic-primary {
-		@apply bg-l-primary dark:bg-d-primary;
-	}
-	.dynamic-secondary {
-		@apply bg-l-secondary dark:bg-d-secondary;
-	}
-	.dynamic-bg {
-		@apply bg-l-bgc dark:bg-d-bgc;
-	}
+  .transition-300 {
+    @apply transition-all duration-300;
+  }
+  .center {
+    @apply flex items-center justify-center;
+  }
+  .dynamic-text {
+    @apply text-l-text dark:text-d-text;
+  }
+  .dynamic-primary {
+    @apply bg-l-primary dark:bg-d-primary;
+  }
+  .dynamic-secondary {
+    @apply bg-l-secondary dark:bg-d-secondary;
+  }
+  .dynamic-bg {
+    @apply bg-l-bgc dark:bg-d-bgc;
+  }
 }
