--- a/public/style.css
+++ b/public/style.css
@@ -689,7 +689,7 @@ video {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 50;
+  z-index: 40;
   display: flex;
   width: 100%;
   align-items: center;
@@ -967,8 +967,8 @@ video {
   right: -300px;
 }
 
-.bottom-\[-93px\]{
-  bottom: -93px;
+.bottom-\[-88px\]{
+  bottom: -88px;
 }
 
 .left-0{
@@ -999,24 +999,12 @@ video {
   top: 3.5rem;
 }
 
+.top-\[-20px\]{
+  top: -20px;
+}
+
 .top-\[61px\]{
   top: 61px;
-}
-
-.bottom-\[-91px\]{
-  bottom: -91px;
-}
-
-.bottom-\[-88px\]{
-  bottom: -88px;
-}
-
-.bottom-\[-70px\]{
-  bottom: -70px;
-}
-
-.bottom-\[-85px\]{
-  bottom: -85px;
 }
 
 .-z-10{
@@ -1025,6 +1013,10 @@ video {
 
 .z-10{
   z-index: 10;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .z-\[999\]{
@@ -1044,9 +1036,14 @@ video {
   margin-right: 0.5rem;
 }
 
-.mx-\[34px\]{
-  margin-left: 34px;
-  margin-right: 34px;
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-\[2px\]{
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
 .mx-auto{
@@ -1064,39 +1061,14 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.my-4{
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .my-3{
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
 
-.mx-\[2px\]{
-  margin-left: 2px;
-  margin-right: 2px;
-}
-
-.mx-\[1px\]{
-  margin-left: 1px;
-  margin-right: 1px;
-}
-
-.mx-\[0px\]{
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-.mx-\[28px\]{
-  margin-left: 28px;
-  margin-right: 28px;
-}
-
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .-mt-4{
@@ -1131,8 +1103,8 @@ video {
   margin-left: 0.5rem;
 }
 
-.ml-8{
-  margin-left: 2rem;
+.ml-6{
+  margin-left: 1.5rem;
 }
 
 .ml-auto{
@@ -1175,20 +1147,16 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-\[2px\]{
+  margin-top: 2px;
+}
+
 .mt-\[61px\]{
   margin-top: 61px;
 }
 
 .mt-auto{
   margin-top: auto;
-}
-
-.mt-\[2px\]{
-  margin-top: 2px;
-}
-
-.ml-6{
-  margin-left: 1.5rem;
 }
 
 .box-border{
@@ -1431,6 +1399,14 @@ video {
   width: 100vw;
 }
 
+.w-\[26\%\]{
+  width: 26%;
+}
+
+.w-\[25\%\]{
+  width: 25%;
+}
+
 .max-w-7xl{
   max-width: 80rem;
 }
@@ -1521,10 +1497,6 @@ video {
   flex-direction: column-reverse;
 }
 
-.flex-nowrap{
-  flex-wrap: nowrap;
-}
-
 .place-content-center{
   place-content: center;
 }
@@ -1541,10 +1513,6 @@ video {
   align-items: center;
 }
 
-.justify-start{
-  justify-content: flex-start;
-}
-
 .justify-end{
   justify-content: flex-end;
 }
@@ -1555,6 +1523,10 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.justify-around{
+  justify-content: space-around;
 }
 
 .gap-1{
@@ -1604,10 +1576,6 @@ video {
   white-space: nowrap;
 }
 
-.text-balance{
-  text-wrap: balance;
-}
-
 .rounded{
   border-radius: 0.25rem;
 }
@@ -1652,6 +1620,11 @@ video {
   border-width: 0.5px;
 }
 
+.border-x-2{
+  border-left-width: 2px;
+  border-right-width: 2px;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
@@ -1662,6 +1635,10 @@ video {
 
 .border-t-\[1px\]{
   border-top-width: 1px;
+}
+
+.border-l-\[1px\]{
+  border-left-width: 1px;
 }
 
 .border-solid{
@@ -1702,6 +1679,22 @@ video {
 
 .border-transparent{
   border-color: transparent;
+}
+
+.border-opacity-20{
+  --tw-border-opacity: 0.2;
+}
+
+.border-opacity-30{
+  --tw-border-opacity: 0.3;
+}
+
+.border-opacity-10{
+  --tw-border-opacity: 0.1;
+}
+
+.border-opacity-5{
+  --tw-border-opacity: 0.05;
 }
 
 .bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
@@ -1801,14 +1794,6 @@ video {
   padding: 1rem;
 }
 
-.p-8{
-  padding: 2rem;
-}
-
-.p-6{
-  padding: 1.5rem;
-}
-
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1878,6 +1863,10 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.pb-16{
+  padding-bottom: 4rem;
+}
+
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -1920,26 +1909,6 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.pb-10{
-  padding-bottom: 2.5rem;
-}
-
-.pb-16{
-  padding-bottom: 4rem;
-}
-
-.pb-\[72px\]{
-  padding-bottom: 72px;
-}
-
-.pb-\[70px\]{
-  padding-bottom: 70px;
-}
-
-.pb-\[68px\]{
-  padding-bottom: 68px;
 }
 
 .text-left{
@@ -2551,26 +2520,22 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:bottom-\[-90px\]{
-    bottom: -90px;
+  .md\:bottom-\[-88px\]{
+    bottom: -88px;
   }
 
   .md\:top-\[73px\]{
     top: 73px;
   }
 
-  .md\:bottom-\[-88px\]{
-    bottom: -88px;
+  .md\:mx-7{
+    margin-left: 1.75rem;
+    margin-right: 1.75rem;
   }
 
   .md\:my-2{
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-  }
-
-  .md\:mx-7{
-    margin-left: 1.75rem;
-    margin-right: 1.75rem;
   }
 
   .md\:mb-2{
@@ -2603,10 +2568,6 @@ video {
 
   .md\:h-40{
     height: 10rem;
-  }
-
-  .md\:h-5{
-    height: 1.25rem;
   }
 
   .md\:h-\[168px\]{
@@ -2653,10 +2614,6 @@ video {
     width: 10rem;
   }
 
-  .md\:w-5{
-    width: 1.25rem;
-  }
-
   .md\:w-8{
     width: 2rem;
   }
@@ -2694,24 +2651,16 @@ video {
     padding-bottom: 0.5rem;
   }
 
+  .md\:pb-8{
+    padding-bottom: 2rem;
+  }
+
   .md\:pb-\[72px\]{
     padding-bottom: 72px;
   }
 
   .md\:pr-14{
     padding-right: 3.5rem;
-  }
-
-  .md\:pb-10{
-    padding-bottom: 2.5rem;
-  }
-
-  .md\:pb-4{
-    padding-bottom: 1rem;
-  }
-
-  .md\:pb-8{
-    padding-bottom: 2rem;
   }
 
   .md\:text-3xl{
@@ -2943,16 +2892,6 @@ video {
     order: 5;
   }
 
-  .xl\:my-4{
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-  }
-
-  .xl\:my-1{
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-  }
-
   .xl\:mx-2{
     margin-left: 0.5rem;
     margin-right: 0.5rem;
@@ -2963,8 +2902,26 @@ video {
     margin-right: 34px;
   }
 
+  .xl\:my-1{
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+  }
+
+  .xl\:my-4{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
   .xl\:-mb-1{
     margin-bottom: -0.25rem;
+  }
+
+  .xl\:ml-2{
+    margin-left: 0.5rem;
+  }
+
+  .xl\:ml-8{
+    margin-left: 2rem;
   }
 
   .xl\:ml-\[288px\]{
@@ -2975,20 +2932,16 @@ video {
     margin-right: 28%;
   }
 
-  .xl\:mt-\[73px\]{
-    margin-top: 73px;
-  }
-
   .xl\:mt-1{
     margin-top: 0.25rem;
   }
 
-  .xl\:ml-8{
-    margin-left: 2rem;
+  .xl\:mt-\[73px\]{
+    margin-top: 73px;
   }
 
-  .xl\:ml-2{
-    margin-left: 0.5rem;
+  .xl\:mr-\[25\%\]{
+    margin-right: 25%;
   }
 
   .xl\:block{
@@ -2997,6 +2950,10 @@ video {
 
   .xl\:flex{
     display: flex;
+  }
+
+  .xl\:h-10{
+    height: 2.5rem;
   }
 
   .xl\:h-14{
@@ -3015,8 +2972,8 @@ video {
     height: 2rem;
   }
 
-  .xl\:h-10{
-    height: 2.5rem;
+  .xl\:w-10{
+    width: 2.5rem;
   }
 
   .xl\:w-14{
@@ -3035,16 +2992,12 @@ video {
     width: 1.5rem;
   }
 
-  .xl\:w-full{
-    width: 100%;
-  }
-
   .xl\:w-8{
     width: 2rem;
   }
 
-  .xl\:w-10{
-    width: 2.5rem;
+  .xl\:w-full{
+    width: 100%;
   }
 
   .xl\:items-center{
@@ -3053,6 +3006,10 @@ video {
 
   .xl\:justify-start{
     justify-content: flex-start;
+  }
+
+  .xl\:justify-center{
+    justify-content: center;
   }
 
   .xl\:justify-between{
@@ -3085,18 +3042,14 @@ video {
     padding-bottom: 0px;
   }
 
-  .xl\:pb-4{
-    padding-bottom: 1rem;
+  .xl\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .xl\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-
-  .xl\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .xl\:text-lg{
