Change a whole design in search page

--- a/tailwind.css
+++ b/tailwind.css
@@ -127,4 +127,7 @@
   .dynamic-bg {
     @apply bg-l-bgc dark:bg-d-bgc;
   }
+  .text-shadow {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  }
 }
