--- a/public/style.css
+++ b/public/style.css
@@ -995,10 +995,6 @@ video {
   top: 50%;
 }
 
-.top-14{
-  top: 3.5rem;
-}
-
 .top-\[-20px\]{
   top: -20px;
 }
@@ -1091,6 +1087,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -1117,10 +1117,6 @@ video {
 
 .mr-2{
   margin-right: 0.5rem;
-}
-
-.mr-4{
-  margin-right: 1rem;
 }
 
 .mt-1{
@@ -1187,10 +1183,6 @@ video {
   display: none;
 }
 
-.h-1\/2{
-  height: 50%;
-}
-
 .h-10{
   height: 2.5rem;
 }
@@ -1221,10 +1213,6 @@ video {
 
 .h-5{
   height: 1.25rem;
-}
-
-.h-52{
-  height: 13rem;
 }
 
 .h-6{
@@ -1297,6 +1285,10 @@ video {
 
 .h-screen{
   height: 100vh;
+}
+
+.max-h-\[70px\]{
+  max-height: 70px;
 }
 
 .min-h-1{
@@ -1387,6 +1379,10 @@ video {
   width: 365px;
 }
 
+.w-\[50px\]{
+  width: 50px;
+}
+
 .w-\[80\%\]{
   width: 80%;
 }
@@ -1417,6 +1413,10 @@ video {
 
 .flex-none{
   flex: none;
+}
+
+.flex-grow{
+  flex-grow: 1;
 }
 
 .grow{
@@ -1668,12 +1668,28 @@ video {
   border-color: transparent;
 }
 
+.border-opacity-100{
+  --tw-border-opacity: 1;
+}
+
 .border-opacity-20{
   --tw-border-opacity: 0.2;
 }
 
+.border-opacity-40{
+  --tw-border-opacity: 0.4;
+}
+
 .border-opacity-5{
   --tw-border-opacity: 0.05;
+}
+
+.border-opacity-10{
+  --tw-border-opacity: 0.1;
+}
+
+.border-opacity-30{
+  --tw-border-opacity: 0.3;
 }
 
 .bg-\[rgba\(214\2c 215\2c 216\2c 0\.7\)\]{
@@ -2043,6 +2059,11 @@ video {
   color: rgb(184 38 38 / var(--tw-text-opacity));
 }
 
+.text-l-secondary{
+  --tw-text-opacity: 1;
+  color: rgb(235 235 235 / var(--tw-text-opacity));
+}
+
 .text-l-text{
   --tw-text-opacity: 1;
   color: rgb(10 10 18 / var(--tw-text-opacity));
@@ -2106,6 +2127,18 @@ video {
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2209,6 +2242,10 @@ video {
   background-color: rgb(23 24 28 / var(--tw-bg-opacity));
 }
 
+.text-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+}
+
 .backdrop\:cursor-pointer::backdrop{
   cursor: pointer;
 }
@@ -2261,16 +2298,6 @@ video {
 
 .hover\:opacity-100:hover{
   opacity: 1;
-}
-
-.hover\:dynamic-primary:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 248 253 / var(--tw-bg-opacity));
-}
-
-.hover\:dynamic-primary:hover:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 31 36 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -2348,6 +2375,10 @@ video {
   --tw-border-opacity: 0.2;
 }
 
+.dark\:border-opacity-5:is(.dark *){
+  --tw-border-opacity: 0.05;
+}
+
 .dark\:bg-\[rgba\(214\2c 215\2c 216\2c 0\.2\)\]:is(.dark *){
   background-color: rgba(214,215,216,0.2);
 }
@@ -2392,6 +2423,12 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.dark\:shadow-none:is(.dark *){
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .dark\:ring-offset-slate-900:is(.dark *){
   --tw-ring-offset-color: #0f172a;
 }
@@ -2416,10 +2453,6 @@ video {
 }
 
 @media (min-width: 640px){
-  .sm\:top-24{
-    top: 6rem;
-  }
-
   .sm\:mb-28{
     margin-bottom: 7rem;
   }
@@ -2430,14 +2463,6 @@ video {
 
   .sm\:h-10{
     height: 2.5rem;
-  }
-
-  .sm\:h-36{
-    height: 9rem;
-  }
-
-  .sm\:h-64{
-    height: 16rem;
   }
 
   .sm\:h-\[calc\(100vh-73px\)\]{
