--- a/public/style.css
+++ b/public/style.css
@@ -1003,6 +1003,10 @@ video {
   top: 61px;
 }
 
+.top-0{
+  top: 0px;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -1287,6 +1291,22 @@ video {
   height: 100vh;
 }
 
+.h-11{
+  height: 2.75rem;
+}
+
+.h-28{
+  height: 7rem;
+}
+
+.h-24{
+  height: 6rem;
+}
+
+.h-20{
+  height: 5rem;
+}
+
 .max-h-\[70px\]{
   max-height: 70px;
 }
@@ -1399,6 +1419,54 @@ video {
   width: 100vw;
 }
 
+.w-32{
+  width: 8rem;
+}
+
+.w-40{
+  width: 10rem;
+}
+
+.w-56{
+  width: 14rem;
+}
+
+.w-\[502px\]{
+  width: 502px;
+}
+
+.w-\[382px\]{
+  width: 382px;
+}
+
+.w-1\/5{
+  width: 20%;
+}
+
+.w-1\/4{
+  width: 25%;
+}
+
+.w-\[402px\]{
+  width: 402px;
+}
+
+.w-\[422px\]{
+  width: 422px;
+}
+
+.w-\[442px\]{
+  width: 442px;
+}
+
+.w-\[432px\]{
+  width: 432px;
+}
+
+.w-2\/5{
+  width: 40%;
+}
+
 .max-w-7xl{
   max-width: 80rem;
 }
@@ -1471,6 +1539,10 @@ video {
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.cursor-default{
+  cursor: default;
 }
 
 .resize-none{
@@ -1600,6 +1672,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-\[4px\]{
+  border-radius: 4px;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1668,24 +1744,16 @@ video {
   border-color: transparent;
 }
 
+.border-opacity-10{
+  --tw-border-opacity: 0.1;
+}
+
 .border-opacity-100{
   --tw-border-opacity: 1;
 }
 
 .border-opacity-20{
   --tw-border-opacity: 0.2;
-}
-
-.border-opacity-40{
-  --tw-border-opacity: 0.4;
-}
-
-.border-opacity-5{
-  --tw-border-opacity: 0.05;
-}
-
-.border-opacity-10{
-  --tw-border-opacity: 0.1;
 }
 
 .border-opacity-30{
@@ -1750,6 +1818,11 @@ video {
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
+.bg-d-danger{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 66 66 / var(--tw-bg-opacity));
+}
+
 .bg-cover{
   background-size: cover;
 }
@@ -1787,6 +1860,14 @@ video {
 
 .p-4{
   padding: 1rem;
+}
+
+.p-\[2px\]{
+  padding: 2px;
+}
+
+.p-\[3px\]{
+  padding: 3px;
 }
 
 .px-1{
@@ -2074,6 +2155,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-d-danger{
+  --tw-text-opacity: 1;
+  color: rgb(255 66 66 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -2106,6 +2192,10 @@ video {
   opacity: 0.9;
 }
 
+.opacity-30{
+  opacity: 0.3;
+}
+
 .shadow-2xl{
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
@@ -2130,15 +2220,15 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2291,6 +2381,16 @@ video {
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#177CFF\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 124 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#d32a2a\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(211 42 42 / var(--tw-bg-opacity));
+}
+
 .hover\:text-blue-700:hover{
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
@@ -2298,6 +2398,18 @@ video {
 
 .hover\:opacity-100:hover{
   opacity: 1;
+}
+
+.hover\:opacity-\[1\.2\]:hover{
+  opacity: 1.2;
+}
+
+.hover\:opacity-\[1\.3\]:hover{
+  opacity: 1.3;
+}
+
+.hover\:opacity-\[2\]:hover{
+  opacity: 2;
 }
 
 .focus\:outline-none:focus{
